...
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_music_player"
            android:title="Songs" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/music_icon"
            android:title="Playlists" />

        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/music_icon"
            android:title="Albums" />

...
