<resources>
    <string name="app_name">AwesomePlayer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_duration">over 9000</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_album">Search by album</string>
    <string name="search_by_artist">Search by artist</string>
    <string name="action_addToPlaylist">Create new Playlist</string>
    <string name="action_deleteAllPlaylists">Delete all Playlists</string>
    <string name="action_playlist">Add to Playlist:</string>
</resources>
