<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
...
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:src="@android:drawable/ic_media_rew"
                    app:backgroundTint="@color/darkgrey" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bt_play"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:src="@android:drawable/ic_media_play"
                    app:borderWidth="0dp"
                    app:elevation="10dp" />
...
